<resources>
    <string name="app_name">Hackaton2019</string>
    <string name="egg_hunter">EGG HUNTER</string>
    <string name="c_est_parti">C\'est parti !!</string>
    <string name="eggs">eggs</string>
    <string name="title_activity_maps">title</string>
    <string name="bienvenue_dans_egghunter_dans_ce_jeu_de_parcours_tu_devras_te_rendre_a_differents_endroits_afin_de_recuperer_des_oeufs_et_ainsi_pouvoir_acceder_au_l_enigme_ultime_et_ainsi_obtenir_la_carte_ultime_de_tout_les_oeufs_presents_dans_toulouse_pour_ce_faire_tu_devras_r_soudre_des_enigmes_ou_des_questions_de_culture_g_n_rale_afin_d_acceder_a_l_oeuf_suivant_allez_lance_toi">Bienvenue dans EggHunter, dans ce jeu de parcours tu devras te rendre a differents endroits afin de recuperer des oeufs et ainsi pouvoir acceder au l\'enigme ultime et ainsi obtenir la carte ultime de tout les oeufs presents dans Toulouse. Pour ce faire tu devras résoudre des enigmes ou des questions de culture générale afin d\'acceder a l\'oeuf suivant. Allez lance toi !!</string>
    <string name="au_xviii_eme_si_cle_qu_est_ce_qu_tait_le_batiment_avec_le_clochet_et_l_horloge_la_sortie_du_m_tro_capitole">Au XVIII eme siécle, Qu\'est ce qu\'était le batiment avec le clochet et l\'horloge à la sortie du métro capitole?</string>
    <string name="un_donjon">Un donjon</string>
    <string name="une_biblioth_que">Une bibliothéque</string>
    <string name="une_habitation">Une habitation</string>
    <string name="un_tribunal">Un tribunal</string>
    <string name="combien_de_verres_contient_un_m_tre_de_ricard">Combien de verres contient un mètre de ricard?</string>
    <string name="_10">10</string>
    <string name="_12">12</string>
    <string name="_14">14</string>
    <string name="_17">17</string>
    <string name="quel_est_le_prix_d_un_paquet_de_cigarette_arnaud_bernard">Quel est le prix d\'un paquet de cigarette à Arnaud Bernard?</string>
    <string name="_4">4€</string>
    <string name="_5">5€</string>
    <string name="_5_50">5,50€</string>
    <string name="_6">6€</string>
    <string name="je_suis_un_homme_je_suis_une_femme_et_je_suis_ni_un_homme_ni_une_femme_qui_suis_je">Je suis un homme, je suis une femme et je suis ni un homme ni une femme, qui suis-je?</string>
    <string name="dieu">Dieu</string>
    <string name="une_ombre">Une ombre</string>
    <string name="un_v_tement">un vêtement</string>
    <string name="un_chien">un chien</string>
    <string name="quel_est_le_plus_grand_chiffre_du_monde">Quel est le plus grand chiffre du monde?</string>
    <string name="infini">∞</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="si_tu_me_perds_je_tombe_qui_suis_je">Si tu me perds je tombe, qui suis je?</string>
    <string name="mes_jambes">Mes jambes</string>
    <string name="l_quilibre">l\'équilibre</string>
    <string name="la_vie">la vie</string>
    <string name="l_escalier">l\'escalier</string>
    <string name="je_suis_plus_long_que_la_tour_eiffel_j_ai_la_meme_forme_mais_je_suis_beaucoup_moins_lourd_qui_suis_je">Je suis plus long que la tour eiffel, j\'ai la meme forme mais je suis beaucoup moins lourd, qui suis-je?</string>
    <string name="la_tour_eiffel_de_las_vegas">la tour eiffel de las vegas</string>
    <string name="ses_plans">ses plans</string>
    <string name="son_ombre">son ombre</string>
    <string name="la_statue_de_libert">la statue de liberté</string>
    <string name="quel_est_le_seul_moyen_d_arreter_le_temps_et_de_le_constater">Quel est le seul moyen d\'arreter le temps et de le constater?</string>
    <string name="tre_marty_mcfly">être marty mcfly</string>
    <string name="une_photo">une photo</string>
    <string name="une_vid_o">une vidéo</string>
    <string name="mourrir">mourrir</string>
    <string name="annie_deux_enfants_le_premier_est_une_fille_combien_de_chance_y_a_t_il_que_le_second_soit_un_gar_on">Annie à deux enfants, le premier est une fille, combien de chance y a t\'il que le second soit un garçon?</string>
    <string name="_1_2">1/2</string>
    <string name="_2_3">2/3</string>
    <string name="_3_4">3/4</string>
    <string name="_1_4">1/4</string>
    <string name="quel_est_le_surnom_du_stadium">Quel est le surnom du stadium?</string>
    <string name="le_petit_wembley">le petit wembley</string>
    <string name="la_petite_bonbonera">la petite bonbonera</string>
    <string name="le_petit_camp_nou">le petit camp nou</string>
    <string name="le_petit_bernabeu">le petit bernabeu</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="class_algo_public_static_void_main_string_args_int_x_125_int_z_1500_for_int_i_0_i_15_i_z_150_while_x_z_x_80_system_out_print_z"><![CDATA[class Algo { public static void main(String[] args) { int x = 125; int z = 1500; for(int i = 0; i<=15; i++){ z-=150; while( x<z) { x+=80; } } System.out.print(z); } }]]></string>
    <string name="_1000">1000</string>
    <string name="_900">-900</string>
    <string name="_400">400</string>
    <string name="_1350">1350</string>
    <string name="_750">-750</string>
</resources>