<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/grass">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="370dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:gravity="center"
        android:text="@string/egg_hunter"
        android:textSize="45sp"
        app:fontFamily="@font/air2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEggs"
        android:layout_width="266dp"
        android:layout_height="152dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/eggs"
        android:src="@drawable/easteregg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="399dp"
        android:layout_height="272dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/bienvenue_dans_egghunter_dans_ce_jeu_de_parcours_tu_devras_te_rendre_a_differents_endroits_afin_de_recuperer_des_oeufs_et_ainsi_pouvoir_acceder_au_l_enigme_ultime_et_ainsi_obtenir_la_carte_ultime_de_tout_les_oeufs_presents_dans_toulouse_pour_ce_faire_tu_devras_r_soudre_des_enigmes_ou_des_questions_de_culture_g_n_rale_afin_d_acceder_a_l_oeuf_suivant_allez_lance_toi"
        android:textSize="26sp"
        app:fontFamily="@font/air"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivEggs" />

    <Button
        android:id="@+id/btPlay"
        android:layout_width="159dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c_est_parti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>